[project]
name = "multiojectivelayoutoptimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pulp>=3.3.0",
    "pymoo>=0.6.1.6",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "spopt>=0.7.0",
    "varname>=0.15.1",
]
