[project]
name = "multiobjectoptimizationcableyarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "anywidget>=0.9.21",
    "geopandas>=1.0.1",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "numpy==1.23.0",
    "pandas<2.0",
    "plotly>=6.6.0",
    "pulp<3",
    "pymoo>=0.6.1.6",
    "scipy==1.8.1",
    "shapely>=2.1.2",
    "spopt==0.4.1",
    "varname>=0.15.1",
]
